<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginScreen">

    <TextView
        android:id="@+id/tv_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Login"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_below="@+id/tv_title_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/email_id"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username_id"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password_"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text_background"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_id"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit_id"
            android:text="@string/submit_"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:background="@drawable/green_background"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:gravity="right"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:text="@string/ifregister_"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_register_id"
                android:textColor="@color/blue"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:text="@string/register_"
                android:layout_height="match_parent"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>