<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AdminAddDetaills">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/edt_hotelname_id"
            android:layout_margin="10dp"
            android:hint="@string/entr_hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_margin="10dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_weight="0.4"
                android:text="@string/type_room"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/black"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner
                android:layout_weight="0.6"
                android:gravity="center"
                android:id="@+id/spinner_roomtype_id"
                android:entries="@array/array_roomtype"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="50dp">
            <TextView
                android:layout_weight="0.4"
                android:text="@string/room"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/black"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_add_room_id"
                android:layout_weight="0.2"
                android:text="+"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="40dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_room_id"
                android:layout_weight="0.2"
                android:text="0"
                android:textColor="@color/black"
                android:gravity="center|center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_minus_room_id"
                android:layout_weight="0.2"
                android:text="--"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="50dp">
            <TextView
                android:layout_weight="0.4"
                android:text="@string/room_capacity"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/black"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_add_guest_id"
                android:layout_weight="0.2"
                android:text="+"
                android:textColor="@color/black"
                android:gravity="center|center_vertical"
                android:textSize="40dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_guest_id"
                android:text="0"
                android:textColor="@color/black"
                android:gravity="center|center_vertical"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_minus_guest_id"
                android:layout_weight="0.2"
                android:text="--"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_weight="0.4"
                android:text="@string/date"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/black"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="0.6"
                android:gravity="center"
                android:hint="@string/select_"
                android:textColor="@color/black"
                android:id="@+id/tv_datepicker_admin_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
<!--
        <LinearLayout
            android:layout_margin="10dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.4"
                android:text="@string/price"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/black"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="0.6"
                android:gravity="center"
                android:id="@+id/tv_datepicker_admin_id"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
-->



        <Button
            android:id="@+id/btn_submit_id"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/submit_"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:background="@drawable/orange_background"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</RelativeLayout>